packages/typ/tests/fixtures/diagnostics/0170_adt_record_field_bool_int_05.ml.expected
File "0170_adt_record_field_bool_int_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0170_adt_record_field_bool_int_05 is not a valid module name.

File "0170_adt_record_field_bool_int_05.ml", line 2, characters 42-43:
2 | let _ : rec_epsilon = { size = 4; open_ = 5 }
                                              ^
Error: The constant 5 has type int but an expression was expected of type
         bool
